Add Project Service

--- a/src/pages/project/project.html
+++ b/src/pages/project/project.html
@@ -6,7 +6,7 @@
       </button>
     </ion-buttons>
     <ion-title>
-      Project A
+      Project
     </ion-title>
   </ion-navbar>
 
@@ -31,17 +31,14 @@
       <ion-grid>
         <ion-row>
           <ion-col text-center>
-            <h2>Project A</h2>
+            <h2>{{ project.projectName }}</h2>
             <div class="subtitle">Category</div>
           </ion-col>
         </ion-row>
         <ion-row>
           <ion-col text-justify>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-              ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-              laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in. 
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
-              anim id est laborum.</p>
+            <p>{{ project.projectScope }}</p>
+            <p></p>
           </ion-col>
         </ion-row>
         <ion-row>
@@ -52,7 +49,7 @@
               outline 
               icon-start 
               block
-              (click)="onEditProject()">
+              (click)="onEditProject(project)">
               <ion-icon name='create'></ion-icon>
               Edit
             </button>
@@ -64,7 +61,7 @@
               outline 
               icon-start 
               block
-              (click)="onRemoveProject()">
+              (click)="onRemoveProject(project)">
               <ion-icon name='trash'></ion-icon>
               Remove
             </button>
