--- a/src/pages/projects/projects.html
+++ b/src/pages/projects/projects.html
@@ -11,24 +11,10 @@
   <ion-list>
     <button 
       ion-item 
-      (click)="onLoadProject()">
-      <h2>Project A</h2>
-      <h3>Don't Know What To Do!</h3>
-      <p>I've had a pretty messed up day. If we just...</p>
-    </button>
-    <button 
-      ion-item 
-      (click)="onLoadProject()">
-      <h2>Project B</h2>
-      <h3>Don't Know What To Do!</h3>
-      <p>I've had a pretty messed up day. If we just...</p>
-    </button>
-    <button 
-      ion-item 
-      (click)="onLoadProject()">
-      <h2>Project C</h2>
-      <h3>Don't Know What To Do!</h3>
-      <p>I've had a pretty messed up day. If we just...</p>
+      (click)="onLoadProject(project)"
+      *ngFor="let project of projects; let i = index">
+      <h2>{{ project.projectName }}</h2>
+      <p>{{ project.projectScope }}</p>
     </button>
   </ion-list>
 </ion-content>
