--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -4,9 +4,15 @@
       <button ion-button icon-only (click)="onNewActivity()">
         <ion-icon name="add"></ion-icon>
       </button>
+      <button ion-button icon-only (click)="onEditActivity(activity)">
+        <ion-icon name="create"></ion-icon>
+      </button>
+      <button ion-button icon-only (click)="onRemoveActivity(activity)">
+        <ion-icon name="trash"></ion-icon>
+      </button>
     </ion-buttons>
     <ion-title>
-      Activity 1
+      {{ activity.activityTitle }}
     </ion-title>
   </ion-navbar>
 
@@ -29,42 +35,13 @@
         <ion-grid>
           <ion-row>
             <ion-col text-center>
-              <h2>Activity 1</h2>
-              <div class="subtitle">Category</div>
+              <h2>{{ activity.activityTitle }}</h2>
+              <div class="subtitle">{{ activity.activityAmountHours }} hours</div>
             </ion-col>
           </ion-row>
           <ion-row>
             <ion-col text-justify>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
-                anim id est laborum.</p>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col>
-              <button 
-                ion-button 
-                color="primary" 
-                outline 
-                icon-start 
-                block
-                (click)="onEditActivity()">
-                <ion-icon name='create'></ion-icon>
-                Edit
-              </button>
-            </ion-col>
-            <ion-col>
-              <button 
-                ion-button 
-                color="danger" 
-                outline 
-                icon-start 
-                block
-                (click)="onRemoveActivity()">
-                <ion-icon name='trash'></ion-icon>
-                Remove
-              </button>
+              <p>{{ activity.activityDetails }}</p>
             </ion-col>
           </ion-row>
         </ion-grid>
@@ -72,23 +49,21 @@
     </ion-list>
     
     <ion-list *ngSwitchCase="'risks'">
+      <ion-item *ngIf="risks.length == 0">
+        <p>No risks.</p>
+      </ion-item>
+
       <button 
         ion-item 
-        (click)="onLoadRisk()">
-        <h2>Risk A</h2>
-        <p>I've had a pretty messed up day. If we just...</p>
-      </button>
-      <button 
-        ion-item 
-        (click)="onLoadRisk()">
-        <h2>Risk B</h2>
-        <p>I've had a pretty messed up day. If we just...</p>
-      </button>
-      <button 
-        ion-item 
-        (click)="onLoadRisk()">
-        <h2>Risk C</h2>
-        <p>I've had a pretty messed up day. If we just...</p>
+        *ngFor="let risk of risks; let i = index"
+        (click)="onLoadRisk(risk)">
+        <h2>{{ risk.riskTitle }}</h2>
+        <ion-badge 
+          [ngClass]="{ 
+            'threat': risk.riskTypeName == 'Threat', 
+            'opportunity': risk.riskTypeName == 'Opportunity' }">{{ risk.riskTypeName }}</ion-badge>
+        <ion-badge 
+          color="light">{{ risk.riskCategoryName }}</ion-badge>
       </button>
     </ion-list>
   </div>
