--- a/src/pages/project/project.html
+++ b/src/pages/project/project.html
@@ -47,6 +47,14 @@
     </ion-list>
 
     <ion-list *ngSwitchCase="'activities'">
+      <ion-grid *ngIf="activities.length == 0">
+        <ion-row>
+          <ion-col text-center>
+            <p>No activities found</p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
       <button 
         ion-item 
         *ngFor="let activity of activities; let i = index"
@@ -57,6 +65,14 @@
     </ion-list>
 
     <ion-list *ngSwitchCase="'risks'">
+      <ion-grid *ngIf="risks.length == 0">
+        <ion-row>
+          <ion-col text-center>
+            <p>No risks found</p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
       <button 
         ion-item 
         *ngFor="let risk of risks; let i = index"
