--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -49,13 +49,12 @@
     </ion-list>
     
     <ion-list *ngSwitchCase="'risks'">
-      <ion-grid *ngIf="risks.length == 0">
-        <ion-row>
-          <ion-col text-center>
-            <p>No risks found</p>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+      <ion-row *ngIf="risks.length == 0">
+        <ion-col text-center>
+          <p>No risks found</p>
+          <p></p>
+        </ion-col>
+      </ion-row>
 
       <button 
         ion-item 
