--- a/src/pages/risk-form/risk-form.html
+++ b/src/pages/risk-form/risk-form.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar no-border-bottom>
     <ion-title>
-      {{ mode }} Risk
+      Risk
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -9,6 +9,9 @@
 <ion-content padding>
     <form [formGroup]="riskForm" (ngSubmit)="onSubmit()">
         <ion-list>
+            <ion-list-header>
+                {{ mode }} Risk
+            </ion-list-header>
             <ion-item>
                 <ion-label floating>Title</ion-label>
                 <ion-input 
