--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -18,8 +18,8 @@
 
   <ion-toolbar no-border-top>
     <ion-segment [(ngModel)]="tab">
-      <ion-segment-button value="home">
-        Home
+      <ion-segment-button value="info">
+        Info
       </ion-segment-button>
       <ion-segment-button value="risks">
         Risks
@@ -30,22 +30,20 @@
 
 <ion-content padding>
   <div [ngSwitch]="tab">
-    <ion-list *ngSwitchCase="'home'">
-      <ion-list *ngSwitchCase="'home'">
-        <ion-grid>
-          <ion-row>
-            <ion-col text-center>
-              <h2>{{ activity.activityTitle }}</h2>
-              <div class="subtitle">{{ activity.activityAmountHours }} hours</div>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col text-justify>
-              <p>{{ activity.activityDetails }}</p>
-            </ion-col>
-          </ion-row>
-        </ion-grid>
-      </ion-list>
+    <ion-list *ngSwitchCase="'info'">
+      <ion-grid>
+        <ion-row>
+          <ion-col text-center>
+            <h2>{{ activity.activityTitle }}</h2>
+            <div class="subtitle">{{ activity.activityAmountHours }} hours</div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col text-justify>
+            <p>{{ activity.activityDetails }}</p>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-list>
     
     <ion-list *ngSwitchCase="'risks'">
@@ -63,8 +61,8 @@
         <h2>{{ risk.riskTitle }}</h2>
         <ion-badge 
           [ngClass]="{ 
-            'threat': risk.riskTypeName == 'Threat', 
-            'opportunity': risk.riskTypeName == 'Opportunity' }">{{ risk.riskTypeName }}</ion-badge>
+            'ion-badge-threat': risk.riskTypeName == 'Threat', 
+            'ion-badge-opportunity': risk.riskTypeName == 'Opportunity' }">{{ risk.riskTypeName }}</ion-badge>
         <ion-badge 
           color="light">{{ risk.riskCategoryName }}</ion-badge>
       </button>
