--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -13,11 +13,11 @@
         Login
       </ion-list-header>
       <ion-item>
-        <ion-label floating>Email</ion-label>
+        <ion-label>Email</ion-label>
         <ion-input type="text" formControlName="userEmail"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label floating>Password</ion-label>
+        <ion-label>Password</ion-label>
         <ion-input type="password" formControlName="userPassword"></ion-input>
       </ion-item>
     </ion-list>
