--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -57,14 +57,20 @@
       <button 
         ion-item 
         *ngFor="let risk of risks; let i = index"
-        (click)="onLoadRisk(risk)">
+        (click)="onLoadRisk(risk, activity)">
+        <ion-icon 
+          color="primary" 
+          name="{{ risk.riskIdentificationId ? 'checkmark-circle' : '' }}" 
+          item-end></ion-icon>
+        <!-- <ion-icon 
+          color="danger" 
+          name="close"
+          item-end></ion-icon> -->
         <h2>{{ risk.riskTitle }}</h2>
-        <ion-badge 
-          [ngClass]="{ 
-            'ion-badge-threat': risk.riskTypeName == 'Threat', 
-            'ion-badge-opportunity': risk.riskTypeName == 'Opportunity' }">{{ risk.riskTypeName }}</ion-badge>
-        <ion-badge 
-          color="light">{{ risk.riskCategoryName }}</ion-badge>
+        <ion-note [ngClass]="{ 'ion-note-threat': risk.riskTypeName == 'Threat', 
+          'ion-note-opportunity': risk.riskTypeName == 'Opportunity' }">
+          {{ risk.riskTypeName }}
+        </ion-note>
       </button>
     </ion-list>
   </div>
