RIsk Ident and Remove

--- a/src/pages/project/project.html
+++ b/src/pages/project/project.html
@@ -88,8 +88,8 @@
         (click)="onLoadRisk(risk, project)">
         <ion-icon 
           color="primary" 
-          name="{{ risk.riskIdentificationId ? 'checkmark-circle' : '' }}" 
-          item-end></ion-icon>
+          name="{{ risk.riskIdentificationId ? 'checkmark-circle' : 'checkmark-circle-outline' }}" 
+          item-start></ion-icon>
         <!-- <ion-icon 
           color="danger" 
           name="close"
