--- a/src/pages/risk/risk.html
+++ b/src/pages/risk/risk.html
@@ -80,7 +80,7 @@
 
       <ion-item>
         <ion-label>Marks as problem</ion-label>
-        <ion-toggle [(ngModel)]="probl" checked="false" color="danger"></ion-toggle>
+        <ion-toggle [(ngModel)]="probl" checked="true" color="danger"></ion-toggle>
       </ion-item>
 
       <ion-item [(hidden)]="!probl">
