--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -17,7 +17,7 @@
         <ion-input type="text" formControlName="userEmail"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label fixed>Pass</ion-label>
+        <ion-label fixed>Password</ion-label>
         <ion-input type="password" formControlName="userPassword"></ion-input>
       </ion-item>
     </ion-list>
